[package]
name = "rust-apex"
version = "0.3.0"
authors = ["Wu Young <doomsplayer@gmail.com>"]
description = "Rust support for apex"
homepage = "https://github.com/doomsplayer/rust-apex"
license = "MIT"
repository = "https://github.com/doomsplayer/rust-apex"
readme = "README.md"
keywords = ["apex", "lambda", "aws"]

[dependencies]
serde = "1"
serde_derive = "1"
serde_json = "1"
