[package]
name = "new_checker"
version = "0.1.0"
authors = ["Weiyüen Wu <doomsplayer@gmail.com>"]

[dependencies]
rust-apex = "0.3"
failure = "0.1"
serde = "1"
serde_derive = "1"
serde_json = "1"
rusoto_core = "0.30"
rusoto_lambda = "0.30"

[[bin]]
name = "scheduler"
path = "src/scheduler.rs"

[[bin]]
name = "worker"
path = "src/worker.rs"